CHANGELOG

== Mar 14, 2012
* Add Unique UID to the images path
* Changed keywords examples to be more appropriate on admin site
* Gems updated
* Testing watermark on images

== Mar 12, 2012
* Popup image bug fix

== Mar 11, 2012
* Highly improved performance, from 1600ms to 220ms average (6-10x faster)
* Using fragment cache with memcached
* Upgraded Rails to 3.2.2
* Updated Gems
* Fix Font Color for item text, it was too light (CSS fix).

== Mar 6, 2012
* Fixed HTML5 spec bugs. Main Index and Category Index with Zero errors
* 100% passing the http://validator.w3.org/check test
* Fixed bug on twitter sharing not respecting the checkbox
* Added longer remember me for logged in users
* Better live preview for TinyMCE item editor
* Improved site performance
* Rspec tests for twitter share


== Mar 2, 2012
* Showing 2 columns on the Admin Dashboard instead of 3
* Temporarily Removed comments from the Admin Dashboard
* Improved SQL performance for index page
* Improve layout for iPad
* Added links to Version History lists (WIP for full Versioning system)
* Disable caching for logged in users
* Reduced Cache to 12 hour for Staled content
* Reduced Cache to 10 minutes for Active content

== Feb 25, 2012
* Youtube Video Helper:
*   Auto embed video given the youtube video ID
*   Auto adjust video size according to screen resolution
*   Auto add Youtube screenshot to main article view
* Slightly increased image size for article page
* Slightly reduced image size for mobile view to fit on smaller devices
* Added Captcha to registration page.
* Show Youtube Video above item body if set by the user.
* Show "Youtube Source" if the item is a youtube video.

== Feb 23, 2012
* fixed date on item breadcrumb
* auto Posting to Twitter stable
* added Favicon
* hopefully fixed forced logout issues
* using Dalli as memcached server

== Feb 22, 2012
* removed SOLR resque
* changed SOLR to be local machine

== Feb 21, 2012
* disabled Cloudfront for now

== Feb 20, 2012